# puntoVenta

./: .anjuta_sym_db.db  .base.yaml  .gitignore  Makefile  Makefile.in  config.status  configure  configure.ac  libtool  main.py  requerimientos.txt
.anjuta/session/: anjuta.session
Debug/: Makefile  config.h  config.status  libtool
Debug/po/: Makefile  Makefile.in  POTFILES
Debug/src/: Makefile  puntoventa
Debug/src/.deps/: main.Po
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
gld/: #Inventarios.glade#  Inventarios.glade  Inventarios.glade~  caja.glade~  inicio.glade  login.glade  login.glade~  menu principal.glade~  menu_principal.glade  menu_principal.glade~  ventas.glade  ventas.glade~
po/: Makefile  Makefile.in
pruebasDiv/: .base.yaml  combobox.py  entrys.py  glade.py  messDialog.py  num.py  ventana1.py
pruebasDiv/Plantillas/: example.glade  giglade.py
sql/: db.sql
src/: Makefile  Makefile.am  Makefile.in  cajas.py  db.py  inicio.py  login.py  main.cc  puntoventa  widgets.py
src/.deps/: main.Po
